🆕 feat: add frontend Dockerfile and migrate backend to Python FastAPI
- Add new Dockerfile for frontend using nginx:alpine, custom config, and static file serving
- Replace backend Dockerfile (was Go) with Python 3.11-slim, pip requirements, and FastAPI uvicorn startup
- Update iDRAC client log endpoints to new Redfish API paths and add debug prints
- Improve alert filtering logic to include "sel" entry types in hardware monitor

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,15 @@
-# Backend Dockerfile
-FROM golang:1.21-alpine AS builder
+# 基于官方 Python 镜像
+FROM python:3.11-slim
 
+# 设置工作目录
 WORKDIR /app
-COPY backend/go.mod backend/go.sum ./
-RUN go mod download
 
-COPY backend/ .
-RUN go build -o idrac-monitor main.go config.go
+# 安装依赖
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-FROM alpine:latest
-RUN apk --no-cache add ca-certificates
-WORKDIR /root/
+# 复制项目代码
+COPY . .
 
-COPY --from=builder /app/idrac-monitor .
-
-EXPOSE 8080
-
-CMD ["./idrac-monitor"]
+# 启动 FastAPI 应用（假设你的入口为 main.py，app 对象为 "app"）
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
