--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,18 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-requests==2.31.0
-pydantic==2.5.0
-python-dotenv==1.0.0
-schedule==1.2.0
-asyncio==3.4.3
-httpx==0.25.2
+annotated-types==0.7.0
+anyio==4.10.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+fastapi==0.116.1
+h11==0.16.0
+idna==3.10
+pydantic==2.11.7
+pydantic_core==2.33.2
+python-dotenv==1.1.1
+requests==2.32.5
+sniffio==1.3.1
+starlette==0.47.3
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+urllib3==2.5.0
+uvicorn==0.35.0
